# cmake-demo-for-reddit

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/include/: CMakeLists.txt
src/include/database/: CMakeLists.txt  database.cpp  database.h
src/include/match/: CMakeLists.txt  match.cpp  match.h
src/include/record/: CMakeLists.txt  record.cpp  record.h
src/include/spectogram/: CMakeLists.txt  spectogram.cpp  spectogram.h
